# MMAndConcurrecnyWorkspace

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
allocator/include/: allocator.h
allocator/tests/: CMakeLists.txt  default_compile_test.cpp
base/: macros.h
bump_pointer_allocator/: CMakeLists.txt
bump_pointer_allocator/include/: bump_pointer_allocator.h
bump_pointer_allocator/tests/: allocator_test.cpp
cmake/: ClangTidy.cmake  TestFramework.cmake
concurrency/event_loop/: CMakeLists.txt
concurrency/event_loop/include/: event_loop.h
concurrency/event_loop/tests/: event_loop_tests.cpp
concurrency/lock_free_stack/: CMakeLists.txt
concurrency/lock_free_stack/include/: lock_free_stack.h
concurrency/lock_free_stack/tests/: lock_free_stack_tests.cpp
concurrency/thread_pool/: CMakeLists.txt
concurrency/thread_pool/include/: thread_pool.h
concurrency/thread_pool/tests/: thread_pool_tests.cpp
concurrency/thread_safe_containers/: CMakeLists.txt
concurrency/thread_safe_containers/include/: fast_thread_safe_map.h  thread_safe_queue.h
concurrency/thread_safe_containers/tests/: containers_tests.cpp
memory_management/bump_pointer_allocator/include/: bump_pointer_allocator.h
memory_management/bump_pointer_allocator/tests/: allocator_test.cpp
memory_management/free_list_allocator/: CMakeLists.txt
memory_management/free_list_allocator/include/: free_list_allocator.h
memory_management/reference_counting_gc/: CMakeLists.txt
memory_management/reference_counting_gc/tests/: gc_test.cpp  (+1 more)
memory_management/reference_counting_object_modle/: CMakeLists.txt
memory_management/run_of_slots_allocator/: CMakeLists.txt
scripts/: install-deps.sh
scripts/codestyle/: clang_tidy_check.py
(+8 files in other folders)
